@@ -1,5 +1,9 @@
 2014-10-14  Niels Möller  <nisse@lysator.liu.se>
 
+	* testsuite/eddsa-verify-test.c: New testcase.
+	* testsuite/Makefile.in (TS_HOGWEED_SOURCES): Added
+	eddsa-verify-test.c.
+
 	* eddsa-verify.c (_eddsa_verify, eddsa_verify_itch): New file, new
 	functions.
 	* eddsa.h: Declare new functions.
